--- a/stylesheets.css
+++ b/stylesheets.css
@@ -1,11 +1,8 @@
 #wrapper {
-	position: absolute;
-	width: 1920px;
-	height: 1080px;
+	width: 100%;
+	height: 100%;
 	background-color: rgba(64,189,194,1);
 	overflow: hidden;
-	--web-view-name: Web 1920 – 1;
-	--web-view-id: Web_1920__1;
 	--web-scale-to-fit: true;
 	--web-scale-to-fit-type: fit;
 	--web-scale-on-resize: true;
