--- a/stylesheets.css
+++ b/stylesheets.css
@@ -1,14 +1,8 @@
-#wrapper {
-	width: 100%;
-	height: 100%;
+body{
 	background-color: rgba(64,189,194,1);
-	overflow: hidden;
-	--web-scale-to-fit: true;
-	--web-scale-to-fit-type: fit;
-	--web-scale-on-resize: true;
-	--web-enable-deep-linking: true;
 }
 #title {
+	position: absolute;
 	left: 237px;
 	top: 271px;
 	position: absolute;
@@ -23,6 +17,7 @@
 	color: rgba(255,255,255,1);
 }
 #detail {
+	position:absolute;
 	left: 717px;
 	top: 756px;
 	position: absolute;
@@ -37,6 +32,7 @@
 	color: rgba(255,255,255,1);
 }
 #copyright {
+	position: absolute;
 	left: 813px;
 	top: 1000px;
 	position: absolute;
