--- a/stylesheets.css
+++ b/stylesheets.css
@@ -3,46 +3,55 @@ body{
 }
 #title {
 	position: absolute;
-	left: 0px;
-	top: 0px;
-	position: absolute;
+	width: 99%;
+	top: 13%;
 	overflow: visible;
-	width: 1447px;
 	white-space: nowrap;
+	color: rgba(255,255,255,1);
+}
+#title > p {
+	width: 99%;
 	text-align: center;
 	font-family: Hiragino Kaku Gothic ProN;
 	font-style: normal;
 	font-weight: normal;
-	font-size: 140px;
-	color: rgba(255,255,255,1);
+	font-size: 120px;
 }
 #detail {
-	position:absolute;
-	left: 500px;
-	top: 550px;
 	position: absolute;
+	top: 70%;
+	width: 99%;
 	overflow: visible;
-	width: 487px;
 	white-space: nowrap;
-	text-align: left;
+	color: rgba(255,255,255,1);
+}
+#detail > p{
+	margin-top: 10px;
+	width: 99%;
+	text-align: center;
 	font-family: Hiragino Kaku Gothic ProN;
 	font-style: normal;
 	font-weight: normal;
 	font-size: 30px;
-	color: rgba(255,255,255,1);
 }
 #copyright {
-	position: absolute;
-	left: 600px;
-	top: 800px;
-	position: absolute;
 	overflow: visible;
-	width: 295px;
+	width: 99%;
 	white-space: nowrap;
-	text-align: left;
+	color: rgba(255,255,255,1);
+	position: absolute;/*←絶対位置*/
+    bottom: 0; /*下に固定*/
+}
+#copyright > p {
+	width: 99%;
+	text-align: center;
 	font-family: Hiragino Kaku Gothic ProN;
 	font-style: normal;
 	font-weight: normal;
 	font-size: 20px;
-	color: rgba(255,255,255,1);
+}
+p {
+	margin: 0%;
+	border: 0ch;
+	padding: 0%;
 }
